Wed May 27 17:32:45 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* each-substream-mapper.rb: mapfちょっと最適化
	* port.rb: OnMemorySizedPoolQueue, ChankedPoolQeueu追加, PoolQueue
	 ちょっと最適化
	* hash-md5.rb: エラーメッセージ修正

Mon May 25 19:30:00 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* local-file-input.rb: [BUG:96]対応
	* port.rb: SizedPoolQueue#push: Import::SET_NO_IMPORT 対応
	* block-source.rb: シンタックスエラーをクライアントに返す.

Fri May 22 16:48:31 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb: PoolQueue#push: Import::SET_NO_IMPORT 対応

Fri May 22 14:38:43 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb: PoolQueue#push_all: 追加. Import#push_buf: push_all対応

Wed May 20 16:08:11 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* processor.rb: 通信先が死んだときログを残すようにした.

Tue May 19 00:14:24 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb: バグっていた.

Fri May 15 16:46:09 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-group-by.rb, port.rb: 不必要なメソッド戻り値をnilにした
	* bin/inspector, master.rb, node.rb, controller.rb, processor.rb,
	  inspector.rb, fairy-BODY.templ: インスペクタ追加
	* port.rb, conf.rb: [BUG#49] BUG49用デバッグメッセージ整理, たまり
	  送りにmax 値を与えられるようにした.
	* processor.rb, conf.rb: [SR#87] processorのモニタリング機能で
	  ObjectSpaceのスキャンはオプションにした

Tue Apr 28 17:05:48 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* controller.rb, conf.rb: [SR#88] バグってた.

Tue Apr 28 14:53:24 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* controller.rb, conf.rb: [SR#88] GROUP_BYで後段のプロセッサの数を指定できる
	* port.rb: [BUG#49] FileBufferdQuueueのたまり送り機能追加
	* processor.rb: [SR#87] オブジェクトがリークしているところを修正
	* log.rb: [BUG#49] ちょっと修正

Mon Apr 27 18:11:38 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-there.rb: [BUG#90] thereで一般のオブジェクトを渡すとリファレン
	  スがわたる

Mon Apr 27 17:17:32 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* processor.rb: [SR#87] メッセージ修正
	* log.rb: 上記に伴う機能追加
	* port.rb: [BUG#49]用デバッグコード追加

Mon Apr 27 02:00:52 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
